# AmigoBot_navigation

./: CMakeLists.txt  README.md
amigo_navigation_common/: CMakeLists.txt  package.xml
amigo_navigation_common/config/: base_local_planner_params.yaml  costmap_common_params.yaml  move_base_params.yaml
amigo_navigation_global/: CMakeLists.txt  package.xml
amigo_navigation_global/config/: global_costmap_params.yaml  local_costmap_params.yaml
amigo_navigation_global/launch/: 2dslam.launch  amcl.launch  logslam.launch  move_base_global.launch
amigo_navigation_local/: CMakeLists.txt  package.xml
amigo_navigation_local/config/: global_costmap_params.yaml  youbot_nav_sim.rviz
amigo_navigation_local/launch/: move_base_local.launch
