<package>
  <name>youbot_navigation_common</name>
  <description>Helper classes for navigation of the KUKA youBot</description>
  <author>Chao Yao</author>
  <maintainer email="chao.yao@tu-dresden.de">Chao Yao</maintainer>
  <license>BSD</license>
  <version>0.1.0</version>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rplidar_ros</run_depend>
 
</package>


