<package>
  <name>amigo_navigation_local</name>
  <description>Local navigation for the amigo</description>
  <author>Chao Yao</author>
  <maintainer email="x@x.de">x</maintainer>
  <license>BSD</license>
  <version>0.1.0</version>
  <url>http://www.locomotec.com</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>move_base</build_depend>

  <run_depend>roscpp</run_depend>
 
</package>


